etc/example-voting-app/k8s-specifications/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /vote(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 5000
          - path: /result(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 5001
